--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         </div>
     </div>
 
+    <!-- arcs -->
     <div id="arcs" class="container-fluid arcSection">
         <div class="row">
             <div class="col my-5 text-center">
@@ -138,6 +139,7 @@
         </div>
     </div>
 
+    <!-- hashiras -->
     <div id="hashiras" class="container-fluid hashiraSection">
         <div class="row">
             <div class="col m-5 text-center">
@@ -153,11 +155,15 @@
         </div>
     </div>
 
+    <!-- uppermoons -->
     <div id="uppermoons" class="container-fluid uppermoonSection">
         <div class="row">
             <div class="col m-5 text-center">
                 <h1 class="uppermoonName">UPPERMOONS</h1>
-                <h5 class="my-3"></h5>
+                <h5 class="my-3">The Twelve Kizuki, a group of formidable demons that serve Muzan Kibutsuji, the Demon
+                    King, include the six greatest demons known as the Upper Moons. Upper Moon One is the strongest on a
+                    ranking of one to six. The Demon Slayer Corps, who must vanquish an Upper Moon in order to become a
+                    Hashira, frequently causes the members of the Upper Moons to evolve throughout time. </h5>
             </div>
         </div>
 
@@ -261,6 +267,18 @@
             "Tengen Uzui"
         ]
 
+        var positions = [
+            "Water Hashira",
+            "Love Hashira",
+            "Serpent Hashira",
+            "Wind Hashira",
+            "Stone Hashira",
+            "Mist Hashira",
+            "Insect Hashira",
+            "Flame Hashira",
+            "Sound Hashira"
+        ]
+
         var hashiraPictures = [
             "assets/images/hashiras/h1.png",
             "assets/images/hashiras/h2.png",
@@ -283,7 +301,8 @@
                         <img src="` + hashiraPictures[i] + `" class="card-img-top" alt="Hashira">
 
                         <div class="hover-text">
-                            <h5 class="card-title">`+ hashiraName[i] + `</h5>
+                            <h2 class="card-title">`+ hashiraName[i] + `</h2>
+                            <p class="card-text">`+ positions[i] + `</p>
                         </div>
                     </div>
                 </div>
@@ -293,7 +312,51 @@
     </script>
 
     <script>
+        var uppermoonName = [
+            "Kokushibo",
+            "Doma",
+            "Akaza",
+            "Hantengu",
+            "Gyokko",
+            "Gyutaro and Daki",
+        ]
 
+        var positions = [
+            "Uppermoon One",
+            "Uppermoon Two",
+            "Uppermoon Three",
+            "Uppermoon Four",
+            "Uppermoon Five",
+            "Uppermoon Six",
+        ]
+
+        var uppermoonPictures = [
+            "assets/images/uppermoons/u1.png",
+            "assets/images/uppermoons/u2.png",
+            "assets/images/uppermoons/u3.png",
+            "assets/images/uppermoons/u4.png",
+            "assets/images/uppermoons/u5.png",
+            "assets/images/uppermoons/u6.png"
+        ]
+
+        var uppermoonsList = document.getElementById("uppermoonsList");
+
+        for (i = 0; i < uppermoonName.length; i++) {
+            uppermoonsList.innerHTML += `
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="uppermoonCard my-3">
+                    <div class="img-hover-card">
+                        <img src="` + uppermoonPictures[i] + `" class="card-img-top" alt="Uppermoon">
+
+                        <div class="hover-text">
+                            <h2 class="card-title">`+ uppermoonName[i] + `</h2>
+                            <p class="card-text">`+ positions[i] + `</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        `;
+        }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
