made few adjustments

--- a/index.html
+++ b/index.html
@@ -47,15 +47,7 @@
         /* Move content ABOVE overlay */
         .hero-content {
             position: absolute;
-            bottom: 20%;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-
-        .hero-content {
-            position: absolute;
-            bottom: 23%;
+            bottom: 15%;
             width: 100%;
             display: flex;
             justify-content: center;
@@ -72,7 +64,7 @@
         .hero-content p {
             font-family: 'Poppins', sans-serif;
             font-weight: 600;
-            font-size: 15px;
+            font-size: 13px;
             color: #d7d7d7;
         }
     </style>
@@ -82,12 +74,12 @@
 
     <div id="home" class="hero">
         <!-- navbar -->
-        <div class="container-fluid position-sticky top-0 z-1">
-            <nav class="navbar navbar-expand-lg navbar-custom d-flex justify-content-between">
-                <a class="navbar-brand" href="#">
+        <div class="container position-sticky top-0 z-1">
+            <nav class="navbar px-3 py-1 rounded-5 navbar-expand-lg navbar-custom d-flex justify-content-between">
+                <a class="navbar-brand" href="#home">
                     <img src="assets/images/dsLogo.png" alt="Demon Slayer Logo" width="50" height="50">
                     DEMON SLAYER</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                     aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -115,7 +107,7 @@
         <div>
             <div class="hero-content">
                 <div class="container text-center">
-                    <h1 class="mb-2 lh-4">DEMON SLAYER</h1>
+                    <h1 class="mb-2">DEMON SLAYER</h1>
                     <p class="mb-2">Welcome to the world of Demon Slayer — a realm where courage is forged through
                         suffering, bonds are tested in battle, and legends rise from the ashes of despair. Explore the
                         unforgettable arcs that shaped this journey, meet the elite Hashira who stand as humanity’s
@@ -142,7 +134,7 @@
     <!-- hashiras -->
     <div id="hashiras" class="container-fluid hashiraSection">
         <div class="row">
-            <div class="col m-5 text-center">
+            <div class="col my-5 mx-1 text-center">
                 <h1 class="hashiraName">HASHIRAS</h1>
                 <h5 class="my-3">The nine most formidable and proficient swordsmen in the Demon Slayer Corps, the
                     Hashira are the
@@ -158,7 +150,7 @@
     <!-- uppermoons -->
     <div id="uppermoons" class="container-fluid uppermoonSection">
         <div class="row">
-            <div class="col m-5 text-center">
+            <div class="col my-5 mx-1 text-center">
                 <h1 class="uppermoonName">UPPERMOONS</h1>
                 <h5 class="my-3">The Twelve Kizuki, a group of formidable demons that serve Muzan Kibutsuji, the Demon
                     King, include the six greatest demons known as the Upper Moons. Upper Moon One is the strongest on a
@@ -174,7 +166,7 @@
     <!-- kamaboko squad -->
     <div id="kamaboko" class="container-fluid kamabokoSection">
         <div class="row">
-            <div class="col m-5 text-center">
+            <div class="col my-5 mx-1 text-center">
                 <h1 class="kamabokoName">KAMABOKO SQUAD</h1>
                 <h5 class="my-3">Tanjiro Kamado, Zenitsu Agatsuma, Inosuke Hashibira, and Tanjiro's demon sister, Nezuko
                     Kamado, make up the primary squad of young demon slayers in the anime and manga Demon Slayer, which
@@ -186,6 +178,20 @@
         </div>
 
         <div id="kamabokoList" class="row">
+        </div>
+    </div>
+
+    <div class="footer mt-2 p-3">
+        <div class="row">
+            <div class="col">
+                <p>© 2025 Jerome Mercado | All Rights Reserved.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p class="credits">All media belong to their rightful owners and are used solely for educational,
+                    non-commercial purposes.</p>
+            </div>
         </div>
     </div>
 
